большое обновление: реализована возможность доавления своих категорий, исправлены мелкие ошибки, улучшение дизайна

--- a/app/src/main/res/layout/home_dialog_fragment.xml
+++ b/app/src/main/res/layout/home_dialog_fragment.xml
@@ -27,6 +27,7 @@
         android:drawableStart="@drawable/dialog_custom_ruble_icon"
         android:drawablePadding="12dp"
         android:ems="10"
+        android:fontFamily="sans-serif-light"
         android:hint="Сумма"
         android:inputType="number"
         android:paddingStart="12dp"
@@ -68,6 +69,7 @@
         android:background="@drawable/dialog_custom_input"
         android:drawableStart="@drawable/dialog_custom_description_icon"
         android:drawablePadding="12dp"
+        android:fontFamily="sans-serif-light"
         android:hint="Описание"
         android:paddingStart="12dp"
         android:paddingEnd="12dp"
