--- a/app/src/main/res/menu/activity_main_drawer.xml
+++ b/app/src/main/res/menu/activity_main_drawer.xml
@@ -9,12 +9,16 @@
             android:icon="@drawable/main"
             android:title="@string/menu_home" />
         <item
+            android:id="@+id/nav_categories"
+            android:icon="@drawable/list"
+            android:title="@string/menu_categories" />
+        <item
             android:id="@+id/nav_statistics"
             android:icon="@drawable/statistics"
-            android:title="@string/menu_gallery" />
+            android:title="@string/menu_statistics" />
         <item
             android:id="@+id/nav_settings"
             android:icon="@drawable/settings"
-            android:title="@string/menu_slideshow" />
+            android:title="@string/menu_settings" />
     </group>
 </menu>
