--- a/app/src/main/res/navigation/mobile_navigation.xml
+++ b/app/src/main/res/navigation/mobile_navigation.xml
@@ -10,16 +10,20 @@
         android:name="com.example.mysamsungapp.ui.home.HomeFragment"
         android:label="@string/menu_home"
         tools:layout="@layout/fragment_home" />
-
+    <fragment
+        android:id="@+id/nav_categories"
+        android:name="com.example.mysamsungapp.ui.categories.CategoriesFragment"
+        android:label="@string/menu_categories"
+        tools:layout="@layout/fragment_categories" />
     <fragment
         android:id="@+id/nav_statistics"
         android:name="com.example.mysamsungapp.ui.statistics.StatisticsFragment"
-        android:label="@string/menu_gallery"
+        android:label="@string/menu_statistics"
         tools:layout="@layout/fragment_statistics" />
 
     <fragment
         android:id="@+id/nav_settings"
         android:name="com.example.mysamsungapp.ui.settings.SettingsFragment"
-        android:label="@string/menu_slideshow"
+        android:label="@string/menu_settings"
         tools:layout="@layout/fragment_settings" />
 </navigation>
