--- a/app/src/main/res/layout/home_edit_month_dialog.xml
+++ b/app/src/main/res/layout/home_edit_month_dialog.xml
@@ -79,7 +79,7 @@
 
         <com.google.android.material.chip.Chip
             android:id="@+id/chip12"
-            style="@style/Widget.MaterialComponents.Chip.Choice"
+            style="@style/CustomChipStyle"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:layout_weight=".1"
@@ -87,7 +87,7 @@
 
         <com.google.android.material.chip.Chip
             android:id="@+id/chip11"
-            style="@style/Widget.MaterialComponents.Chip.Choice"
+            style="@style/CustomChipStyle"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:layout_weight=".1"
@@ -95,7 +95,7 @@
 
         <com.google.android.material.chip.Chip
             android:id="@+id/chip10"
-            style="@style/Widget.MaterialComponents.Chip.Choice"
+            style="@style/CustomChipStyle"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:layout_weight=".1"
@@ -103,7 +103,7 @@
 
         <com.google.android.material.chip.Chip
             android:id="@+id/chip9"
-            style="@style/Widget.MaterialComponents.Chip.Choice"
+            style="@style/CustomChipStyle"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:layout_weight=".1"
@@ -111,7 +111,7 @@
 
         <com.google.android.material.chip.Chip
             android:id="@+id/chip8"
-            style="@style/Widget.MaterialComponents.Chip.Choice"
+            style="@style/CustomChipStyle"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:layout_weight=".1"
@@ -119,7 +119,7 @@
 
         <com.google.android.material.chip.Chip
             android:id="@+id/chip7"
-            style="@style/Widget.MaterialComponents.Chip.Choice"
+            style="@style/CustomChipStyle"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:layout_weight=".1"
@@ -127,7 +127,7 @@
 
         <com.google.android.material.chip.Chip
             android:id="@+id/chip13"
-            style="@style/Widget.MaterialComponents.Chip.Choice"
+            style="@style/CustomChipStyle"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:layout_weight=".1"
@@ -135,7 +135,7 @@
 
         <com.google.android.material.chip.Chip
             android:id="@+id/chip"
-            style="@style/Widget.MaterialComponents.Chip.Choice"
+            style="@style/CustomChipStyle"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:layout_weight=".1"
@@ -143,7 +143,7 @@
 
         <com.google.android.material.chip.Chip
             android:id="@+id/chip2"
-            style="@style/Widget.MaterialComponents.Chip.Choice"
+            style="@style/CustomChipStyle"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:layout_weight=".1"
@@ -151,21 +151,21 @@
 
         <com.google.android.material.chip.Chip
             android:id="@+id/chip3"
-            style="@style/Widget.MaterialComponents.Chip.Choice"
+            style="@style/CustomChipStyle"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:text="Октябрь" />
 
         <com.google.android.material.chip.Chip
             android:id="@+id/chip4"
-            style="@style/Widget.MaterialComponents.Chip.Choice"
+            style="@style/CustomChipStyle"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:text="Ноябрь" />
 
         <com.google.android.material.chip.Chip
             android:id="@+id/chip5"
-            style="@style/Widget.MaterialComponents.Chip.Choice"
+            style="@style/CustomChipStyle"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:text="Декабрь" />
