--- a/app/src/main/res/layout/home_edit_week_dialog.xml
+++ b/app/src/main/res/layout/home_edit_week_dialog.xml
@@ -88,7 +88,7 @@
 
                 <com.google.android.material.chip.Chip
                     android:id="@+id/chip12"
-                    style="@style/Widget.MaterialComponents.Chip.Choice"
+                    style="@style/CustomChipStyle"
                     android:layout_width="wrap_content"
                     android:layout_height="wrap_content"
                     android:layout_weight=".1"
@@ -96,7 +96,7 @@
 
                 <com.google.android.material.chip.Chip
                     android:id="@+id/chip11"
-                    style="@style/Widget.MaterialComponents.Chip.Choice"
+                    style="@style/CustomChipStyle"
                     android:layout_width="wrap_content"
                     android:layout_height="wrap_content"
                     android:layout_weight=".1"
@@ -104,7 +104,7 @@
 
                 <com.google.android.material.chip.Chip
                     android:id="@+id/chip10"
-                    style="@style/Widget.MaterialComponents.Chip.Choice"
+                    style="@style/CustomChipStyle"
                     android:layout_width="wrap_content"
                     android:layout_height="wrap_content"
                     android:layout_weight=".1"
@@ -112,7 +112,7 @@
 
                 <com.google.android.material.chip.Chip
                     android:id="@+id/chip9"
-                    style="@style/Widget.MaterialComponents.Chip.Choice"
+                    style="@style/CustomChipStyle"
                     android:layout_width="wrap_content"
                     android:layout_height="wrap_content"
                     android:layout_weight=".1"
@@ -120,7 +120,7 @@
 
                 <com.google.android.material.chip.Chip
                     android:id="@+id/chip8"
-                    style="@style/Widget.MaterialComponents.Chip.Choice"
+                    style="@style/CustomChipStyle"
                     android:layout_width="wrap_content"
                     android:layout_height="wrap_content"
                     android:layout_weight=".1"
@@ -128,7 +128,7 @@
 
                 <com.google.android.material.chip.Chip
                     android:id="@+id/chip7"
-                    style="@style/Widget.MaterialComponents.Chip.Choice"
+                    style="@style/CustomChipStyle"
                     android:layout_width="wrap_content"
                     android:layout_height="wrap_content"
                     android:layout_weight=".1"
@@ -136,7 +136,7 @@
 
                 <com.google.android.material.chip.Chip
                     android:id="@+id/chip13"
-                    style="@style/Widget.MaterialComponents.Chip.Choice"
+                    style="@style/CustomChipStyle"
                     android:layout_width="wrap_content"
                     android:layout_height="wrap_content"
                     android:layout_weight=".1"
@@ -144,7 +144,7 @@
 
                 <com.google.android.material.chip.Chip
                     android:id="@+id/chip"
-                    style="@style/Widget.MaterialComponents.Chip.Choice"
+                    style="@style/CustomChipStyle"
                     android:layout_width="wrap_content"
                     android:layout_height="wrap_content"
                     android:layout_weight=".1"
@@ -152,7 +152,7 @@
 
                 <com.google.android.material.chip.Chip
                     android:id="@+id/chip2"
-                    style="@style/Widget.MaterialComponents.Chip.Choice"
+                    style="@style/CustomChipStyle"
                     android:layout_width="wrap_content"
                     android:layout_height="wrap_content"
                     android:layout_weight=".1"
@@ -160,21 +160,21 @@
 
                 <com.google.android.material.chip.Chip
                     android:id="@+id/chip3"
-                    style="@style/Widget.MaterialComponents.Chip.Choice"
+                    style="@style/CustomChipStyle"
                     android:layout_width="wrap_content"
                     android:layout_height="wrap_content"
                     android:text="Октябрь" />
 
                 <com.google.android.material.chip.Chip
                     android:id="@+id/chip4"
-                    style="@style/Widget.MaterialComponents.Chip.Choice"
+                    style="@style/CustomChipStyle"
                     android:layout_width="wrap_content"
                     android:layout_height="wrap_content"
                     android:text="Ноябрь" />
 
                 <com.google.android.material.chip.Chip
                     android:id="@+id/chip5"
-                    style="@style/Widget.MaterialComponents.Chip.Choice"
+                    style="@style/CustomChipStyle"
                     android:layout_width="wrap_content"
                     android:layout_height="wrap_content"
                     android:text="Декабрь" />
