--- a/app/src/main/res/drawable/custom_week_text.xml
+++ b/app/src/main/res/drawable/custom_week_text.xml
@@ -2,5 +2,5 @@
 <shape android:shape="rectangle" xmlns:android="http://schemas.android.com/apk/res/android">
     <solid android:color="@color/white"/>
     <corners android:radius="10dp"/>
-    <stroke android:color="@color/teal_200" android:width="1dp"/>
+    <stroke android:color="@android:color/holo_blue_light" android:width="1dp"/>
 </shape>
