--- a/app/src/main/res/layout/home_edit_week_dialog.xml
+++ b/app/src/main/res/layout/home_edit_week_dialog.xml
@@ -1,7 +1,6 @@
 <?xml version="1.0" encoding="utf-8"?>
 <androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto"
-    xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="300dp"
     android:layout_height="wrap_content">
 
@@ -70,6 +69,8 @@
         android:layout_height="match_parent"
         android:layout_marginTop="16dp"
         android:scrollbars="none"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toBottomOf="@+id/arrowLeft">
 
         <LinearLayout
@@ -189,6 +190,8 @@
         android:layout_marginBottom="20dp"
         android:scrollbars="none"
         app:layout_constraintBottom_toTopOf="@+id/cancelTextView"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toBottomOf="@+id/horizontalScrollView">
 
         <LinearLayout
